@@ -12,16 +12,17 @@ DIST genpatches-3.6-4.base.tar.bz2 62335 SHA256 dc72b6c3c4a025f7a1090e8d479ea9a5
 DIST genpatches-3.6-4.extras.tar.bz2 17029 SHA256 7e22574a6618fbb2eade0610fd130a06a322891f109d5ad79b1b8674da5321c8 SHA512 243ac5d7b78e0e308cfb5536439eb6da01f46bebc1a549c61eb9cb0b1199ccabfad2a7d6186a3b1387417dc40082fc931d37d07ed31bb0e78a0e9afc0e4bf655 WHIRLPOOL 71f32176b12b1b08450854afc52e603ba687628a21d18b1ffb83063cd5db159e53b729901085b57dd969fcf731f3ebdb191a1015c6c98bb1a6015f965d23e543
 DIST genpatches-3.6-5.base.tar.bz2 120301 SHA256 de33ac330eec7a05549f6d97cb63023590dd402221d10a5c1235ebab502b998c SHA512 64491d691b0400139e12d60c775cbe45ba68918f66ef1056ba840116eaf4f50a07b568c2d05fc2ce25e81e6b52addb2a623222d493e89b237d714de6860ea749 WHIRLPOOL 20d0b5099906e3fe53bf8d0f89abf532d72869b6a98d4358a528fbb24105a294e7378adaf06f8a4e8aee3331509ba12786197ace792a6024cc69e37458e94f4b
 DIST genpatches-3.6-5.extras.tar.bz2 17038 SHA256 bf6be402ec3ef125ecaf626379f777a262e2f6776d8f5115ac0834f1e3d18b25 SHA512 614c845d474890ad0fd4271ea133464626498c3877d49c1df9940cfb2bc2a68a13828b6cae590a0d5619cf21521fe119fab782714d0bc37c287e0bba29f22fdf WHIRLPOOL ef8c9a76be1ac027b3d01e47bf22dbe178b2b68e85f4ace1186aedd89e513ff010d6e50e1392e17dde3bfebabcff07c348b04163398c43c045d6e37e78caf954
+DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST linux-3.6.tar.bz2 82296001 SHA256 88ae0a20fd39ecae79db0ce8f9397922fae33c8b06a54ed2c883c861126c9771 SHA512 cbaefc2c4c8ab2251c3345b7b2c88d55a49e3468d8b177b05dd6d96a802efa9a052b1a1ecab8b71298bac97f45259516d88253838332b4fdb4307780ebcddce9 WHIRLPOOL e17e3800951f0c3af21015d1a1c99698d0ef70815bd4f131dd60b30baef70d4c255988857533a9a7c058388c2febfcf02d12cde2a7ed46b24fa85aeb260c0251
 EBUILD lh-sources-3.6.1.ebuild 1655 SHA256 0565a12537fef87dace6c98616b8162acdba434e8b5cb0de835d589f02ed0632 SHA512 c96a1af8f2e63f083014159f2ab31178aff671e5728c5de02808c7859a0da81027f7a9836f80009e55a028ef8cf403eb2c6a6143d7d7065a0355dfe3ca40f779 WHIRLPOOL 30e72fdf7af9ef91bbc310f3f6baffd80203a6cf89b55bf615d262df13c54e258854eddfae32db78da08a4b7a8d701a0c2cc2457a73a0896f9f9aa7518065fec
 EBUILD lh-sources-3.6.2.ebuild 1655 SHA256 4abd23d7377f2f405e518f0ae18d8764d998dc42eb2d4a6e5794935672237b31 SHA512 bb80d637bc0393794b20b849ef2ccb14bf0411268fc7933eec4b6306dbe6c16f9e68522b63b18f2b062f2b9dd12f9890dc68f0a65da21c4ef942f7384f38eab1 WHIRLPOOL 83b4b9218e52c101bdb50c50798d6f575c3727b75d9a8369c575439ff722dfcc54b871b58f3b7ba3dad3936c49a44a5f3949745c84a677fde9ca23dc748f5fbb
-EBUILD lh-sources-3.6.4.ebuild 1655 SHA256 cb7c6f20b9f359649650b36e87e9d370d9f9d5ce9e0098e03743d83c3ccd2893 SHA512 2c7416b43977b07c557db87e169fc09f9873cf034584ba7f930b25f8d2f16c5b3222bf8e01171233a7bb2fcfe7e7fdb0411277c91384f3b1d0fc90f8890f8a7e WHIRLPOOL f495deaf26fdec482bf8e5b25b65ffe1f80a23c2c4af6def2da9cf3a7da67fc26e48d2280759e3468b4f6706479b4b1c224308bf1c94a3b9a606a8140b3e445c
-MISC ChangeLog 702 SHA256 900a28a94fcfe9ebf7840452a621d46973c94136d8b9c90cc75affe4ffe83850 SHA512 ba8a219a94d5022cce2972f095a8b3decf2e88c058940e9a8d7f5f08b47141206134c51110227645f65cdedea1163cd6366638e7300196222c706976af9b311b WHIRLPOOL fcbf8ab4ae133a3cc4657bdb6d03fcc0309aaaae5164bafd3bb1c152aabd4369f58f67612c927b206ff6a7efe69e636e7849048afa21cf289ba7c63fd317863c
+EBUILD lh-sources-3.6.4.ebuild 1855 SHA256 4c7413d56e067cb1f41344398183513a4a51921a4ae89b4c0fcde229bcdcdcbf SHA512 12bc55493b873efa1f159ce7bedaba402bf35c9d00707e65ec2818ac8ff7d742a314a43598570cc29abcefe3541742beaffef7c45ef9094bc180bc64039408bb WHIRLPOOL 1f627b516c03278382e0538f9454a52dc8343788977e839da8ff029a1734210e1da2527a6da1b2c1f426e85dc51a820f7e120d5d41c532dd8936be49c158c2c3
+MISC ChangeLog 793 SHA256 a00f0bf16931d9b2e7e06f0bb76278f19fb5bf3d1ec2c085d7c5d3c6d95899a6 SHA512 f00a724139045b0450359643df2869fecfa31285158beb9633cbea2bda607e4af0d024b385a247c0e9aa9fa4830f3a6ec5914dd5625342a9bdddbad568eb634b WHIRLPOOL 649765a2ff26eeb9f011176c881a0f185e4bd2dfbfebbc9dad669e2838db05a60d4b004be487f001de0dd325fc0f8f995870462c17cc41894fd94169c6e996ee
 MISC metadata.xml 458 SHA256 7e2d0354e199ee4243d8396496ef574368ceac66d2e91b949a3dad509031d347 SHA512 3235e64018277eaffb7fa97ff15a3797da3e5f8218c03d52ad33ae8c5fdb5f583e549ed8f3043b43ea8e222570fca0c44ffcf0b97ab03a5e8eb9631a5600fad2 WHIRLPOOL c0b6c201d4d23c99ae87ccfd758a365ebec7c1de31c47d4fe84cd5cf5d15dc32691bc65a3c78c202003882214f626af574014af3179a3ea637f4b4af9d0b30ee
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlCQ02MACgkQgAnW8HDreRZ2+wCdG3Ib/7WDmPNwvU0YL3NotTTm
-htgAoMHVqNuVLejQTNPvaAJVWdZZQxTg
-=+2tE
+iEYEAREIAAYFAlCRAjsACgkQgAnW8HDreRb5/ACdHgW/D36oTCKUrzUALN1D38/H
+VrQAnRTRPcnw8UG/YFoGYba5+qIpYh+E
+=ToZi
 -----END PGP SIGNATURE-----
